# VoxFlow

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  bootstrap.py  codecov.yml  cpplint.cfg
.github/workflows/: codeql.yml  macos.yml  ubuntu.yml  window.yml
Builds/CMake/: CompileOptions.cmake
Dependencies/: bootstrap.json
Includes/Utils/: pch.hpp
Includes/VoxFlow/: VoxFlow.hpp
Includes/VoxFlow/Core/: RenderDevice.hpp
Includes/VoxFlow/Core/Devices/: Context.hpp  DeviceQueryContext.hpp  Instance.hpp  LogicalDevice.hpp  PhysicalDevice.hpp  Queue.hpp  RenderDevice.hpp  SwapChain.hpp  Swapchain.hpp
Includes/VoxFlow/Core/FrameGraph/: BlackBoard.hpp  DependencyGraph.hpp  FrameGraph-Impl.hpp  FrameGraph.hpp  FrameGraphPass-Impl.hpp  FrameGraphPass.hpp  FrameGraphRenderPass.hpp  FrameGraphResources-Impl.hpp  FrameGraphResources.hpp  FrameGraphTexture.hpp  Resource-Impl.hpp  Resource.hpp  ResourceHandle.hpp  TypeTraits.hpp
Includes/VoxFlow/Core/Graphics/Commands/: CommandBuffer.hpp  CommandConfig.hpp  CommandExecutor.hpp  CommandJobSystem-Impl.hpp  CommandJobSystem.hpp  CommandPool.hpp  ResourceBarrierManager.hpp
Includes/VoxFlow/Core/Graphics/Descriptors/: DescriptorPool.hpp  DescriptorSet.hpp  DescriptorSetAllocator.hpp  DescriptorSetAllocatorPool.hpp  DescriptorSetConfig.hpp  DescriptorSetLayout.hpp
Includes/VoxFlow/Core/Graphics/Pipelines/: BasePipeline.hpp  ComputePipeline.hpp  GlslangUtil.hpp  GraphicsPipeline.hpp  PipelineCache.hpp  PipelineLayout.hpp  PipelineLayoutDescriptor.hpp  PipelineStateObject.hpp  ShaderLayoutBinding.hpp  (+5 more)
Includes/VoxFlow/Core/Renderer/: SceneRenderPass.hpp  SceneRenderer.hpp
Includes/VoxFlow/Core/Resources/: BindableResourceView.hpp  Buffer.hpp  Handle.hpp  HandleAllocator.hpp  RenderResource.hpp  RenderResourceAllocator.hpp  RenderResourceGarbageCollector.hpp  RenderResourceMemoryPool.hpp  ResourceState.hpp  ResourceTracker.hpp  ResourceUploadContext.hpp  ResourceView.hpp  Sampler.hpp  StagingBuffer.hpp  StagingBufferContext.hpp  StagingBufferManager.hpp  Texture.hpp
Includes/VoxFlow/Core/Scene/: Material.hpp  PrimitiveBufferPool.hpp  SceneObject.hpp  SceneObjectCollection.hpp  SceneObjectLoader.hpp
Includes/VoxFlow/Core/Utils/: BitwiseOperators.hpp  ChromeTracer.hpp  DebugUtil.hpp  DecisionMaker.hpp  DeviceInputSubscriber.hpp  FenceObject-Impl.hpp  FenceObject.hpp  Handle.hpp  HashUtil.hpp  Initializer-Impl.hpp  Initializer.hpp  Logger.hpp  MathUtils.hpp  MemoryAllocator.hpp  NonCopyable.hpp  RendererCommon-Impl.hpp  RendererCommon.hpp  Thread.hpp  VertexFormat.hpp  pch.hpp
Includes/VoxFlow/Editor/: VoxEditor.hpp  VoxEngine.hpp  VoxFlow.hpp
Includes/VoxFlow/Editor/RenderPass/: PostProcessPass.hpp  SDFGlobalIlluminationPass.hpp  SceneObjectPass.hpp  UIRenderPass.hpp
Includes/VoxFlow/Editor/Utils/: ImGuiUtils.hpp  tinyfiledialogs.hpp
Resources/Shaders/: quad_screen.vert  scene_object  scene_object.frag  scene_object.vert  test_shader.comp  test_shader.frag  test_shader.vert  tonemap.frag  tonemap.vert  triangle.frag
Resources/Shaders/ShaderCache/: scene_object.vfcache_frag  scene_object.vfcache_vert  tonemap.vfcache_frag  tonemap.vfcache_vert
Sources/: CMakeLists.txt
Sources/VoxFlow/: CMakeLists.txt
Sources/VoxFlow/Core/: CMakeLists.txt  RenderDevice.cpp
Sources/VoxFlow/Core/Devices/: Context.cpp  DeviceQueryContext.cpp  Instance.cpp  LogicalDevice.cpp  PhysicalDevice.cpp  Queue.cpp  RenderDevice.cpp  SwapChain.cpp  Swapchain.cpp
Sources/VoxFlow/Core/FrameGraph/: DependencyGraph.cpp  FrameGraph.cpp  FrameGraphPass.cpp  FrameGraphResources.cpp  FrameGraphTexture.cpp  Resource.cpp  ResourceHandle.cpp
Sources/VoxFlow/Core/Graphics/Commands/: CommandBuffer.cpp  CommandConfig.cpp  CommandExecutor.cpp  CommandJobSystem.cpp  CommandPool.cpp  ResourceBarrierManager.cpp
Sources/VoxFlow/Core/Graphics/Descriptors/: DescriptorPool.cpp  DescriptorSet.cpp  DescriptorSetAllocator.cpp  DescriptorSetAllocatorPool.cpp  DescriptorSetLayout.cpp
Sources/VoxFlow/Core/Graphics/Pipelines/: BasePipeline.cpp  ComputePipeline.cpp  GlslangUtil.cpp  GraphicsPipeline.cpp  PipelineCache.cpp  PipelineLayout.cpp  PipelineLayoutDescriptor.cpp  PipelineStreamingContext.cpp  ShaderLayoutBinding.cpp  ShaderModule.cpp  ShaderResourceCollector.cpp  ShaderUtil.cpp
Sources/VoxFlow/Core/Graphics/RenderPass/: FrameBuffer.cpp  RenderPass.cpp  RenderPassCollector.cpp  RenderPassParams.cpp  RenderTargetGroup.cpp
Sources/VoxFlow/Core/Renderer/: SceneRenderPass.cpp  SceneRenderer.cpp
Sources/VoxFlow/Core/Resources/: BindableResourceView.cpp  Buffer.cpp  RenderResource.cpp  RenderResourceAllocator.cpp  RenderResourceGarbageCollector.cpp  RenderResourceMemoryPool.cpp  ResourceUploadContext.cpp  ResourceView.cpp  Sampler.cpp  StagingBuffer.cpp  StagingBufferContext.cpp  StagingBufferManager.cpp  Texture.cpp
Sources/VoxFlow/Core/Scene/: Material.cpp  PrimitiveBufferPool.cpp  SceneObject.cpp  SceneObjectLoader.cpp
Sources/VoxFlow/Core/Utils/: ChromeTracer.cpp  DebugUtil.cpp  DecisionMaker.cpp  DeviceInputSubscriber.cpp  FenceObject.cpp  MemoryAllocator.cpp  RendererCommon.cpp  Thread.cpp  VertexFormat.cpp
Sources/VoxFlow/Editor/: CMakeLists.txt  VoxEditor.cpp  VoxEngine.cpp  VoxFlow.cu  WinMain.cpp
Sources/VoxFlow/Editor/RenderPass/: PostProcessPass.cpp  SDFGlobalIlluminationPass.cpp  SceneObjectPass.cpp  UIRenderPass.cpp
Sources/VoxFlow/Editor/Utils/: ImGuiUtils.cpp  tinyfiledialogs.cpp
Tests/RenderingTests/: CMakeLists.txt  RenderingTests.cpp
Tests/UnitTests/: CMakeLists.txt  UnitTestUtils.hpp  UnitTests.cpp
Tests/UnitTests/Core/Devices/: DeviceQueryContextTests.cpp  InstanceTests.cpp  InstanceTests.hpp  LogicalDeviceTests.cpp  PhysicalDeviceTests.cpp  QueueTests.cpp
Tests/UnitTests/Core/FrameGraph/: FrameGraphTests.cpp
Tests/UnitTests/Core/Graphics/Pipelines/: ComputePipelineTests.cpp  GlslangUtilTests.cpp  GraphicsPipelineTests.cpp  PipelineLayoutTests.cpp
Tests/UnitTests/Core/Graphics/RenderPass/: RenderPassTests.cpp
Tests/UnitTests/ThirdPartySampleTests/: TaskFlowTests.cpp
(+5 files in other folders)
